--- a/config/skylight.yml
+++ b/config/skylight.yml
@@ -1,3 +1,3 @@
 ---
 # The authentication token for the application.
-authentication: ENV["SKYLIGHT_AUTHENTICATIO"]
+authentication: ENV["SKYLIGHT_AUTHENTICATION"]
